2001-03-01  Dave Cole <dave@dccs.com.au>

	* common/state.c (sm_vnformat): Caught a segfault which appeared
	to be a buffer overrun in sm_vnformat().  Added code to actaully
	limit formatting to buffer length and abort if overrun to allow
	real bug to be found.

2001-02-28  David Falllon  <davef@getacard.com>

	* Changed client/client.h, client/gui.h, client/gnocatan.c
		to fix misc. compiler warnings. :) It offended my sensibilities.

2001-02-28  Matt Waggoner  <matt@waggoner.com>

	* Changed client/connect.c and client/client.c to add a "Recent
		Servers" drop-box to the connection dialog.  It saves the last
		100 servers connected to, moving the most recently used one
		to the top of the list.  There's not currently any way to
		delete an entry from the list, but you can manually edit your
		~/.gnome/gnocatan file if you feel so inclined.  Only servers
		that you actually successfully connect to, will be added to
		the MRU list.
		
2001-02-27  Matt Waggoner  <matt@waggoner.com>

	* Changed client/gui.c to have the Game > Settings dialog box
		include an option regarding whether or not each user's chat
		text appears in their text color.  Added a global config var
		to client/gui.h and appropriate checking code to client/chat.c.

2001-02-23  Matt Waggoner  <matt@waggoner.com>

	* Changed client/chat.c to intercept chat text that begins with a
		slash.  This could be the start of a general-purpose slash-command
		syntax.  The only command that is intercepted now is /beep NAME,
		where NAME is a name of one of the players in the game.  If you are
		the player whose name is NAME, a beep sound is generated; otherwise,
		it is ignored.  The purpose of this command is for players to be 
		able to get someone's attention.
	* Changed client/histogram.c to include number of times each value
		was rolled, percentage of the time each value was rolled, and
		text labels along the left side.

2001-02-22  David Fallon  <davef@getacard.com>
